[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/temp_peter/shop.jpg" type="Texture" id=1]
[ext_resource path="res://assets/temp_peter/shopkeeper.jpg" type="Texture" id=2]
[ext_resource path="res://src/Shop/Shop.gd" type="Script" id=3]
[ext_resource path="res://src/Shop/BuyButton.tscn" type="PackedScene" id=4]

[node name="Screen" type="Node2D"]
script = ExtResource( 3 )

[node name="Shop" type="Sprite" parent="."]
position = Vector2( 962.5, 542 )
scale = Vector2( 5.05277, 3.66438 )
texture = ExtResource( 1 )

[node name="Shopkeeper" type="Sprite" parent="."]
position = Vector2( 1695, 494 )
scale = Vector2( 2.53488, 2.62766 )
texture = ExtResource( 2 )

[node name="BuyButton1" parent="." instance=ExtResource( 4 )]
margin_left = 166.0
margin_top = 576.0
margin_right = 246.0
margin_bottom = 601.0

[node name="BuyButton2" parent="." instance=ExtResource( 4 )]
margin_left = 886.0
margin_top = 574.0
margin_right = 966.0
margin_bottom = 599.0

[node name="BuyButton3" parent="." instance=ExtResource( 4 )]
margin_left = 544.0
margin_top = 570.0
margin_right = 624.0
margin_bottom = 595.0

[node name="Gold" type="Label" parent="."]
margin_left = 1512.0
margin_top = 880.0
margin_right = 1612.0
margin_bottom = 930.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="BuyButton1" to="." method="_on_BuyButton1_pressed"]
[connection signal="pressed" from="BuyButton2" to="." method="_on_BuyButton2_pressed"]
[connection signal="pressed" from="BuyButton3" to="." method="_on_BuyButton3_pressed"]
